<resources>
    <string name="app_name">CovidPrevention</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create Account</string>
</resources>